--- a/Pages/!Projects.html
+++ b/Pages/!Projects.html
@@ -14,7 +14,7 @@
 		</style>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<title>Tinker Jae!</title>
+		<title>Tinker Jae! | Projects</title>
 		<link rel="icon" type="image/x-icon" href="/Attachments/profpic.png">
 		<meta name="description" content="Tinker Jae's Website!">
 		<meta name="author" content="Jae">
