Added an update about my website being deprecated to the home page.

--- a/index.html
+++ b/index.html
@@ -35,7 +35,28 @@
 		<hr class="NavbarMobile">
 
 		<!-- this is the main content stuff. -->
-		<h1><u>Welcome!</u></h1>
+		<h1><u>Warning!</u></h1>
+		<p>
+			This website is no longer under active development. <br>
+			<br>
+			Thank you to all my viewers, followers, and friends on <a href="https://neocities.org/">neocities</a>, 
+			but I've moved over to <a href="https://pages.github.com/">GitHub Pages</a> at least for the time being. The reasons why I'm leaving are majority because 
+			I didn't like the structure of having to do everything for my website completely manually and GitHub Pages has support for 
+			<a href="https://jekyllrb.com/">Jekyll</a> which makes posting a lot easier and site maintenance much more hassle free. I'm very grateful for the 
+			ideas and platform neocities has provided me, and if it weren't for neocities I probably wouldn't have a website running today. For that I am 
+			eternally grateful, but for now though, it seems time to move on. I will still highly recommend neocities to anyone looking to make their own 
+			place on the indieweb and for the community and support it so lovingly provides. I also will keep my account open not just to funnel people to my 
+			new website, but because I love the people and content this platform has to offer, so I'll still be around as a viewer.
+			<u>My new website</u> is currently under the domain <br>
+			<a href="https://tinkerjae.github.io/">https://tinkerjae.github.io/</a> and I will update this page and any others if the domain changes again. 
+			Thank you again to everyone, and if you still want to read my content or keep in touch, I am reachable through my new website. <br>
+			<br>
+			Per audacia ad astra,<br>
+			Jae.
+		</p>
+		<hr>
+
+		<h1><u>Welcome</u></h1>
 		<p>
 			Hello and welcome to Tinker Jae!<br> 
 			This is my blog/website where I post stuff about my life, stuff I like, and stuff I'm working on or have worked on.
